--- a/ProyectoUE/Config/DefaultGame.ini
+++ b/ProyectoUE/Config/DefaultGame.ini
@@ -2,7 +2,9 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=46E8454E4D2E6A17CF4D57B75EAB65B8
+ProjectName=Scientificus
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
