--- a/ProyectoUE/Config/DefaultEngine.ini
+++ b/ProyectoUE/Config/DefaultEngine.ini
@@ -6,6 +6,7 @@ GameDefaultMap=/Game/Niveles/MenuPrincipal.MenuPrincipal
 
 EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
 bUseSplitscreen=False
+GlobalDefaultGameMode=/Game/BP/ThirdPersonGameMode.ThirdPersonGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
