--- a/ProyectoUE/Config/DefaultInput.ini
+++ b/ProyectoUE/Config/DefaultInput.ini
@@ -78,6 +78,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Salto",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="Interaccion",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +AxisMappings=(AxisName="MoverAdelante",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoverDerecha",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="Giro",Scale=1.000000,Key=MouseX)
@@ -91,5 +92,5 @@ DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
-+ConsoleKeys=|
++ConsoleKeys=None
 
