--- a/ProyectoUE/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProyectoUE/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,21 +134,21 @@ CurrentPosGridSize=4
 CameraSpeed=5
 
 [MRU]
-MRUItem0=/Game/Niveles/MenuPrincipal
-MRUItem1=/Game/Niveles/Epilogo
-MRUItem2=/Game/Niveles/Instrucciones
-MRUItem3=/Game/Niveles/Nivel1
-MRUItem4=/Game/Niveles/Nivel3
-MRUItem5=/Game/Niveles/Nivel2
-MRUItem6=/Game/Niveles/Datoscuriosos1
-MRUItem7=/Game/Niveles/Transición1
-MRUItem8=/Game/Niveles/PruebasMecanica1
-MRUItem9=/Game/Niveles/prueba
-MRUItem10=/Game/Niveles/Nivel4
+MRUItem0=/Game/Niveles/Nivel4
+MRUItem1=/Game/Niveles/PruebasMecanica1
+MRUItem2=/Game/Niveles/Nivel3
+MRUItem3=/Game/Niveles/Nivel2
+MRUItem4=/Game/Niveles/Epilogo
+MRUItem5=/Game/Niveles/Instrucciones
+MRUItem6=/Game/Niveles/MenuPrincipal
+MRUItem7=/Game/Niveles/Nivel1
+MRUItem8=/Game/Niveles/Datoscuriosos1
+MRUItem9=/Game/Niveles/Transición1
+MRUItem10=/Game/Niveles/prueba
 MRUItem11=/Game/Niveles/PruebasMecanica2
 
 [EditorStartup]
-LastLevel=/Game/Niveles/MenuPrincipal
+LastLevel=/Game/Niveles/Nivel4
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1518,6 +1518,11 @@ SoundNodeModulator.Modulation=True
 EditorNotifyObject.Category=True
 EditorNotifyObject.Trigger Settings=True
 EditorNotifyObject.AnimNotify=True
+Nivel4_C.Tick=True
+Nivel4_C.Default=True
+Nivel4_C.Replication=True
+Nivel4_C.Actor=True
+Nivel4_C.Input=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -1527,11 +1532,11 @@ SuppressRestorePreviouslyOpenAssetsNotification=True
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Border="\"Object.Content.Padding\" \"Object.Appearance.Background.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-ContentWidget="\"Object.Content.Padding\" \"Object.Appearance.Background.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-PanelWidget="\"Object.Content.Padding\" \"Object.Appearance.Background.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-Widget="\"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-Visual="\"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Border="\"Object.Content.Padding\" \"Object.Appearance.Background\" \"Object.Appearance.Background.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+ContentWidget="\"Object.Content.Padding\" \"Object.Appearance.Background\" \"Object.Appearance.Background.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 Object=
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
@@ -1555,10 +1560,10 @@ WindowsTargetSettings="\"Object.Audio.Audio|CookOverrides\" \"Object.Audio.Audio
 LiveLinkSettings="\"Object.LiveLink.DefaultRoleSettings\" \"Object.LiveLink.DefaultRoleSettings.DefaultRoleSettings[0]\" "
 NiagaraSettings="\"Object.Scalability.QualityLevels\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-TextLayoutWidget="\"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Font.OutlineSettings.OutlineColor\" \"Object.Appearance.StrikeBrush\" \"Object.Appearance.StrikeBrush.TintColor\" \"Object.Appearance.ShadowColorAndOpacity\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 HorizontalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 Principal_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-UserWidget="\"Object.Texturas\" "
+UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
 LevelEditorPlaySettings="\"Object.Multiplayer Options.Multiplayer Options|Client\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
@@ -1624,28 +1629,29 @@ SoundWave="\"Object.Voice Management.Voice Management|Concurrency\" \"Object.Voi
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Dialogos/NewMediaPlayer
-MRUItem1=/Game/Niveles/MenuPrincipal
-MRUItem2=/Game/Niveles/Epilogo
-MRUItem3=/Game/Niveles/Instrucciones
-MRUItem4=/Game/Audios/1-1/LEVEL1__1___mp3cut_net__Cue
-MRUItem5=/Game/Audios/1-1/LV-1-ambient-sound_Cue
-MRUItem6=/Game/Audios/1-1/alarm-level-1_Cue
-MRUItem7=/Game/Audios/item-equip-6904__1___1___mp3cut_net__Cue
-MRUItem8=/Game/Modelos/Lifting_Anim_mixamo_com
-MRUItem9=/Game/Modelos/Jumping_Anim_mixamo_com
-MRUItem10=/Game/Modelos/Jumping__1__Anim_mixamo_com
-MRUItem11=/Game/Modelos/Jumping__3__Anim_mixamo_com
-MRUItem12=/Game/Mannequin/Animations/ThirdPersonJump_Start
-MRUItem13=/Game/Mannequin/Animations/ThirdPerson_Jump
-MRUItem14=/Game/Audios/jump-and-sparkwav-6136__1___mp3cut_net__Cue
-MRUItem15=/Game/Niveles/Nivel1
-MRUItem16=/Game/Audios/1-1/LEVEL1-ELECTRICIDAD_Cue
-MRUItem17=/Game/Audios/1-1/LEVEL1-ELECTRICIDAD
-MRUItem18=/Game/Niveles/Nivel3
-MRUItem19=/Game/Audios/1-1/LEVEL1__1___mp3cut_net_
+MRUItem0=/Game/Niveles/Nivel4
+MRUItem1=/Game/Niveles/PruebasMecanica1
+MRUItem2=/Game/Niveles/Nivel3
+MRUItem3=/Game/Niveles/Nivel2
+MRUItem4=/Game/Niveles/Epilogo
+MRUItem5=/Game/Dialogos/NewMediaPlayer
+MRUItem6=/Game/Niveles/Instrucciones
+MRUItem7=/Game/Dialogos/1
+MRUItem8=/Game/Dialogos/Texto
+MRUItem9=/Game/BP/inventario
+MRUItem10=/Game/Audios/1-2/engranajes_Cue
+MRUItem11=/Game/Audios/1-2/engranajes
+MRUItem12=/Game/Audios/1-1/LEVEL1__1___mp3cut_net__Cue
+MRUItem13=/Game/Audios/1-1/LEVEL1__1___mp3cut_net_
+MRUItem14=/Game/Audios/success-1-6297_Cue
+MRUItem15=/Game/BP/Principal
+MRUItem16=/Game/BP/boton
+MRUItem17=/Game/Niveles/MenuPrincipal
+MRUItem18=/Game/Audios/1-1/LV-1-ambient-sound_Cue
+MRUItem19=/Game/Audios/1-1/alarm-level-1_Cue
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1665,7 +1671,6 @@ RecentlyPlaced=/Game/Modelos/LVL1/Radio.Radio;
 RecentlyPlaced=/Game/Modelos/LVL1/Terminal.Terminal;
 RecentlyPlaced=/Game/Modelos/LVL1/Casco.Casco;
 RecentlyPlaced=/Game/BP/coleccionable1.coleccionable1;
-RecentlyPlaced=/Game/Modelos/LVL1/Planta.Planta;
 
 [RootWindow]
 ScreenPosition=X=83.000 Y=3.000
@@ -1697,7 +1702,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Audios
+ContentBrowserTab1.SelectedPaths=/Game/Niveles
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2667,7 +2672,6 @@ Special Effects=False
 Synth=False
 User Created=False
 Advanced=False
-Common=False
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -2874,6 +2878,11 @@ MovieRendererName=
 /Game/Audios/item-equip-6904__1___1___mp3cut_net__Cue.item-equip-6904__1___1___mp3cut_net__Cue=1
 /Game/Niveles/Instrucciones.Instrucciones:PersistentLevel.Instrucciones=1
 /Game/Niveles/Epilogo.Epilogo:PersistentLevel.Epilogo=1
+/Game/Audios/success-1-6297_Cue.success-1-6297_Cue=1
+/Game/Audios/1-1/LEVEL1__1___mp3cut_net_.LEVEL1__1___mp3cut_net_=1
+/Game/Audios/1-2/engranajes.engranajes=1
+/Game/Audios/1-2/engranajes_Cue.engranajes_Cue=1
+/Game/Niveles/Nivel4.Nivel4:PersistentLevel.Nivel4=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3077,7 +3086,7 @@ LightComponentBase=PropertyWrapper.DefaultValueCategory.None,StaticMeshActor.Phy
 BrushComponent=
 BlockingVolume=PropertyWrapper.DefaultValueCategory.None,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 LightmassImportanceVolume=PropertyWrapper.DefaultValueCategory.None,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-PlayerController=PropertyWrapper.DefaultValueCategory.None,StaticMeshActor.Physics.ConstraintsGroup,
+PlayerController=
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 StaticMesh=StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.Mesh,
 coleccionable1_C=PropertyWrapper.DefaultValueCategory.None,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
@@ -3190,7 +3199,7 @@ TileSetEditorSettings=True
 LogVisualizerSettings=True
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=EditorErrors
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
