--- a/ProyectoUE/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProyectoUE/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,21 +134,21 @@ CurrentPosGridSize=4
 CameraSpeed=5
 
 [MRU]
-MRUItem0=/Game/Niveles/Nivel4
-MRUItem1=/Game/Niveles/PruebasMecanica1
-MRUItem2=/Game/Niveles/Nivel3
-MRUItem3=/Game/Niveles/Nivel2
-MRUItem4=/Game/Niveles/Epilogo
-MRUItem5=/Game/Niveles/Instrucciones
-MRUItem6=/Game/Niveles/MenuPrincipal
-MRUItem7=/Game/Niveles/Nivel1
-MRUItem8=/Game/Niveles/Datoscuriosos1
-MRUItem9=/Game/Niveles/Transición1
-MRUItem10=/Game/Niveles/prueba
-MRUItem11=/Game/Niveles/PruebasMecanica2
+MRUItem0=/Game/Niveles/MenuPrincipal
+MRUItem1=/Game/Niveles/Transición1
+MRUItem2=/Game/Niveles/Datoscuriosos1
+MRUItem3=/Game/Niveles/Epilogo
+MRUItem4=/Game/Niveles/PruebasMecanica2
+MRUItem5=/Game/Niveles/Nivel4
+MRUItem6=/Game/Niveles/PruebasMecanica1
+MRUItem7=/Game/Niveles/Nivel3
+MRUItem8=/Game/Niveles/Nivel2
+MRUItem9=/Game/Niveles/Instrucciones
+MRUItem10=/Game/Niveles/Nivel1
+MRUItem11=/Game/Niveles/prueba
 
 [EditorStartup]
-LastLevel=/Game/Niveles/Nivel4
+LastLevel=/Game/Niveles/MenuPrincipal
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1533,15 +1533,15 @@ PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Border="\"Object.Content.Padding\" \"Object.Appearance.Background\" \"Object.Appearance.Background.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-ContentWidget="\"Object.Content.Padding\" \"Object.Appearance.Background\" \"Object.Appearance.Background.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-Object=
+Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Object="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 VerticalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-Button="\"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
 DeveloperSettings=
 AudioSettings="\"Object.Quality.QualityLevels\" "
@@ -1629,26 +1629,26 @@ SoundWave="\"Object.Voice Management.Voice Management|Concurrency\" \"Object.Voi
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Niveles/Nivel4
-MRUItem1=/Game/Niveles/PruebasMecanica1
-MRUItem2=/Game/Niveles/Nivel3
-MRUItem3=/Game/Niveles/Nivel2
-MRUItem4=/Game/Niveles/Epilogo
-MRUItem5=/Game/Dialogos/NewMediaPlayer
-MRUItem6=/Game/Niveles/Instrucciones
-MRUItem7=/Game/Dialogos/1
-MRUItem8=/Game/Dialogos/Texto
-MRUItem9=/Game/BP/inventario
-MRUItem10=/Game/Audios/1-2/engranajes_Cue
-MRUItem11=/Game/Audios/1-2/engranajes
-MRUItem12=/Game/Audios/1-1/LEVEL1__1___mp3cut_net__Cue
-MRUItem13=/Game/Audios/1-1/LEVEL1__1___mp3cut_net_
-MRUItem14=/Game/Audios/success-1-6297_Cue
-MRUItem15=/Game/BP/Principal
-MRUItem16=/Game/BP/boton
-MRUItem17=/Game/Niveles/MenuPrincipal
-MRUItem18=/Game/Audios/1-1/LV-1-ambient-sound_Cue
-MRUItem19=/Game/Audios/1-1/alarm-level-1_Cue
+MRUItem0=/Game/Dialogos/Instrucciones
+MRUItem1=/Game/Niveles/MenuPrincipal
+MRUItem2=/Game/Dialogos/Intrucciones
+MRUItem3=/Game/Audios/mixkit-water-sci-fi-bleep-902_Cue
+MRUItem4=/Game/BP/Principal
+MRUItem5=/Game/Niveles/Transición1
+MRUItem6=/Game/Niveles/Datoscuriosos1
+MRUItem7=/Game/Niveles/Epilogo
+MRUItem8=/Game/BP/Pausa
+MRUItem9=/Game/Dialogos/DialogoPantalla
+MRUItem10=/Game/Dialogos/Mensaje
+MRUItem11=/Game/Niveles/PruebasMecanica2
+MRUItem12=/Game/Niveles/Nivel4
+MRUItem13=/Game/Niveles/PruebasMecanica1
+MRUItem14=/Game/Niveles/Nivel3
+MRUItem15=/Game/Niveles/Nivel2
+MRUItem16=/Game/Dialogos/NewMediaPlayer
+MRUItem17=/Game/Niveles/Instrucciones
+MRUItem18=/Game/Dialogos/1
+MRUItem19=/Game/Dialogos/Texto
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -2883,6 +2883,8 @@ MovieRendererName=
 /Game/Audios/1-2/engranajes.engranajes=1
 /Game/Audios/1-2/engranajes_Cue.engranajes_Cue=1
 /Game/Niveles/Nivel4.Nivel4:PersistentLevel.Nivel4=1
+/Game/Dialogos/Intrucciones.Intrucciones=1
+/Game/Audios/mixkit-water-sci-fi-bleep-902_Cue.mixkit-water-sci-fi-bleep-902_Cue=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3288,6 +3290,9 @@ FbxImportUI.Miscellaneous=False
 RichTextBlock.Appearance=False
 StaticMesh.Collision=True
 Button.Behavior=True
+Border.Behavior=True
+Border.Accessibility=True
+Border.Appearance=True
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
